# bullet_hole_detection_app

./: .gitignore
backend/: .env.example  README.md  pyproject.toml  run.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py
database/: README.md  schema.sql
desktop_app/: .gitignore  api_server.py  pyproject.toml
desktop_app/src/: detector.py  gui.py
mobile_app/: pubspec.yaml
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/lib/: main.dart
mobile_app/lib/data/: dummy_data.dart
mobile_app/lib/models/: session_model.dart  shot_model.dart  user_model.dart
mobile_app/lib/screens/: history_detail_screen.dart  history_screen.dart  live_screen.dart  login_screen.dart  main_layout.dart  register_screen.dart
mobile_app/lib/services/: api_service.dart
mobile_app/lib/theme/: app_theme.dart
mobile_app/test/: widget_test.dart
temp_desktop/: .gitignore  main.py
temp_desktop/src/: __init__.py
