[project]
name = "backend"
version = "0.1.0"
description = "REST API backend for bullet hole detection app"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
