[project]
name = "desktop-app"
version = "0.1.0"
description = "Desktop app for bullet hole detection using YOLO and PyQt6"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pyqt6>=6.11.0",
    "requests>=2.34.2",
    "ultralytics>=8.4.60",
    "uvicorn>=0.49.0",
]
